--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -1,3 +1,201 @@
-body{
-	background-color:white;
+#timeline{
+
+  md-content{
+    position: relative;
+    background: rgba(0,0,0,.04);
+
+    > section {
+      padding:2em;
+      max-width: 75%;
+      position: relative;
+
+      .search-container{
+        padding: 1em 1em; max-width: 1000px; margin: 20px auto 0;
+
+        >div{
+          background-color: white;
+        }
+      }
+      >.md-item{
+        transition: all 300ms;
+
+        &:first-child{
+          margin-top: 10px;
+        }
+
+        md-progress-linear{
+
+          .md-container{
+            top: 1px;
+            height: 4px;
+          }
+        }
+
+        .item-card{
+        	transition: all, 0.3s, ease;
+          background-color: white;
+          visibility: hidden;
+          &, & > * {
+            max-height: 0;
+            opacity: 0;
+            transition: all 300ms;
+          }
+
+          >div{
+            height: 360px;
+            &.ng-hide{
+              height: 0px;
+              display: inherit !important;
+              opacity: 0;
+              transition: none;
+              padding: 0;
+            }
+            .preview{
+              background-repeat: no-repeat;
+              background-size: auto 100%;
+              background-position: center center;
+            }
+          }
+          
+          .split {
+            padding: 10px;
+          }
+        }
+
+        &.open-item{
+           margin: 30px 0px;
+
+          @media (min-width:600px){
+            margin: 30px -10px;
+          }
+
+          .item-card{
+            visibility: visible;
+            &, & > * {
+              max-height: 700px;
+              opacity: 1;
+            }
+            .card{
+              transition: all 0ms;
+            }
+          }
+        }
+
+        md-list-item{
+          font-size: 0.85rem;
+          border-bottom: 1px solid rgba(0,0,0,0.01);
+          background-color: #FFF;
+
+          div span span {
+            -webkit-clip-path : circle(20px at 50% 16%);
+            padding-bottom:230px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+
+            &.open {
+              -webkit-clip-path : circle(208px at 50% 16%);
+            } 
+          }
+
+          &.selected, &.selected >.md-button{
+            background-color: white;
+          }
+
+          .md-list-item-text{
+
+            span{
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;  
+            }
+            
+          }
+
+          .bubble{
+            height: 42px;
+            width: 42px;
+            border: 1px solid white;
+            line-height: initial;
+          }
+        } 
+      }
+    }
+  }
+
+  .md-subheader{
+    padding:0px;
+    margin:0px;
+
+    md-icon{
+      width: 16px;
+      height: 16px;
+      
+      &.desc{
+        transform: rotate(180deg);
+      }
+    }
+    &:not(.md-sticky-no-effect).md-sticky-clone {
+      z-index: 3;
+    }
+    .md-subheader-inner{
+      padding:0; 
+    }
+
+    .md-subheader-content {
+
+      >div{
+        background-color: rgba(0,0,0,0.04);
+        padding: 1.6em 16px;       
+        color: rgba(0,0,0,0.3);
+
+        >div{
+          span{
+            z-index: 2;
+            cursor: pointer;
+          }
+        }
+      }
+    } 
+    &:after{
+      right: 0;
+    }
+
+  }
+
 }
+
+
+.md-sidenav-right{
+  background-color: #ececec;
+
+  h2{
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .mobile-container{ height: 500px; overflow-y: scroll; }
+
+  .skinData{ 
+    font-size: 0.8rem; border-top: 1px solid rgba(0,0,0,0.25);  
+    
+    span{ overflow: hidden; text-overflow: ellipsis; }
+  }
+
+  .activity{
+
+    md-list-item{
+      background-color: white;
+      .md-avatar{ background-position: center center;  background-size: cover;  border-radius: 50%; }
+
+    }
+  }
+}
+
+
+
+
+
+
+
+
