--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -5,11 +5,23 @@ body {
 		background: transparent;
 		// >md-toolbar { background: transparent; }
 		// >md-content { background: transparent; }
+
 	}
-	>md-backdrop {
+	>md-backdrop.md-sidenav-backdrop {
 		z-index: -1!important;
 		display: none!important;
 	}
+}
+
+.topTabs{
+  md-tabs-canvas{
+    height: 60px;
+
+    md-ink-bar{
+      bottom: -12px;
+      background: white;
+    }
+  }
 }
 
 [role="main"] {
@@ -19,6 +31,10 @@ body {
 	>[role="view"] {
 		overflow: visible;
 		background: 0 0;
+    max-width: 75%;
+    width: 100%;
+    padding: 30px 0 0;
+    z-index: 2;
 	}
 }
 
@@ -26,14 +42,14 @@ body {
 	.masthead {
     position: relative;
     margin-bottom: -115px;
-    min-height: 340px;
-    height: 340px;
+    min-height: 308px;
+    height: 308px;
     z-index: 1;
     >md-tabs {
     	max-width: 75%;
     	left: 50%;
     	transform: translate(-50%);
-    	padding: 30px 0 0;
+    	padding: 30px 1.5rem 0;
     	.md-tab {
     		text-transform: none;
     	}
@@ -43,6 +59,9 @@ body {
 	    max-width: 75%;
 	    margin: 0 auto;
 	    font-weight: 400;
+      padding: 0 1.5rem;
+      font-size: 34px;
+      color: #9b9b9b;
     }
   }	
 }
@@ -57,8 +76,8 @@ body {
 
 [ui-view].ng-enter, [ui-view].ng-leave {
   position: absolute;
-  left: 0;
-  right: 0;
+  width: 100%;
+  max-width: 75%;
   z-index: 1;
   -webkit-transition:all .5s ease-in-out;
 	-moz-transition:all .5s ease-in-out;
