--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -31,8 +31,6 @@ body {
 	>[role="view"] {
 		overflow: visible;
 		background: 0 0;
-    max-width: 75%;
-    width: 100%;
     padding: 30px 0 0;
     z-index: 2;
 	}
@@ -48,7 +46,9 @@ body {
     >md-tabs {
     	max-width: 75%;
     	left: 50%;
-    	transform: translate(-50%);
+    	-webkit-transform:translate(-50%);
+		  -moz-transform:translate(-50%);
+		  transform:translate(-50%);
     	padding: 30px 1.5rem 0;
     	.md-tab {
     		text-transform: none;
@@ -77,7 +77,6 @@ body {
 [ui-view].ng-enter, [ui-view].ng-leave {
   position: absolute;
   width: 100%;
-  max-width: 75%;
   z-index: 1;
   -webkit-transition:all .5s ease-in-out;
 	-moz-transition:all .5s ease-in-out;
@@ -104,7 +103,6 @@ body {
 
 [ui-view].ng-leave {
   opacity: 1;
-  /*padding-left: 0px;*/  
    -webkit-transform:translate(0, 0);
   -moz-transform:translate(0, 0);
   transform:translate(0, 0);
@@ -112,7 +110,6 @@ body {
 
 [ui-view].ng-leave-active {
   opacity: 0;
-  /*padding-left: 100px;*/
     -webkit-transform:translate(0, 100px);
   -moz-transform:translate(0, 100px);
   transform:translate(0, 100px);
