--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -4,8 +4,9 @@
     position: relative;
     background: 0 0;
     z-index: 1;
+    max-width: 75%;
+    margin: 0 auto;
     padding:10px;
-    // background: rgba(0,0,0,.04);
 
     > section {
       position: relative;
