--- a/src/modules/contactNets/contactNets.scss
+++ b/src/modules/contactNets/contactNets.scss
@@ -81,6 +81,7 @@ $cnBackgroundCards : #FFF;
         .item-card{
         	transition: all, 0.3s, ease;
           // background-color: white;
+          will-change: auto;
           visibility: hidden;
           &, & > * {
             max-height: 0;
@@ -235,4 +236,5 @@ $cnBackgroundCards : #FFF;
 .md-item {
   transition: all 300ms;
   background: $cnBackgroundCards;
+  will-change: auto;
 }
