--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -1,5 +1,6 @@
 $blueVC: #3cace1;
 $greenVC: #6b9e30;
+$smokeText: #9b9b9b;
 
 
 body {
@@ -15,6 +16,10 @@ body {
 		z-index: -1!important;
 		display: none!important;
 	}
+}
+
+.md-caption{
+  color: $smokeText;
 }
 
 .topTabs{
