--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -39,6 +39,17 @@ body {
       >* {
         text-align: left;
         text-transform: none;
+        font-weight: 400;
+      }
+    }
+    >ul {
+      padding-left: 0px;
+      >li {
+        a, button {
+          text-align: left;
+          text-transform: none;
+          font-weight: 400;
+        }
       }
     }
     .arrowDown {
@@ -46,7 +57,6 @@ body {
       height: 0; 
       border-left: 7px solid transparent;
       border-right: 7px solid transparent;
-      
       border-top: 7px solid black;
     }
     .arrowUp {
@@ -54,7 +64,6 @@ body {
       height: 0; 
       border-left: 7px solid transparent;
       border-right: 7px solid transparent;
-      
       border-bottom: 7px solid black;
     }
   }
