--- a/src/modules/core/sass/cardsLayout.scss
+++ b/src/modules/core/sass/cardsLayout.scss
@@ -22,6 +22,7 @@ $cnBackgroundCards : #FFF;
     > section {
       position: relative;
       max-width: 90%;
+      padding-bottom: 60px;
 
       .empty-section{
         text-align: center;
