--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -10,8 +10,6 @@ body {
 	>md-sidenav {
 		transition: none!important;
 		background: transparent;
-		// >md-toolbar { background: transparent; }
-		// >md-content { background: transparent; }
 
 	}
 	>md-backdrop.md-sidenav-backdrop {
@@ -82,7 +80,7 @@ body {
 		overflow: visible;
 		background: 0 0;
     padding: 30px 0 0;
-    will-change: auto;
+    will-change: transform;
 	}
 }
 
