--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -57,21 +57,23 @@ body {
         }
       }
     }
-    .arrowDown {
-      width: 0; 
-      height: 0; 
-      border-left: 7px solid transparent;
-      border-right: 7px solid transparent;
-      border-top: 7px solid black;
-    }
-    .arrowUp {
-      width: 0; 
-      height: 0; 
-      border-left: 7px solid transparent;
-      border-right: 7px solid transparent;
-      border-bottom: 7px solid black;
-    }
   }
+}
+
+
+.arrowDown {
+  width: 0; 
+  height: 0; 
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-top: 7px solid black;
+}
+.arrowUp {
+  width: 0; 
+  height: 0; 
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid black;
 }
 
 [role="main"] {
@@ -80,7 +82,7 @@ body {
 		overflow: visible;
 		background: 0 0;
     padding: 30px 0 0;
-    will-change: transform;
+    will-change: auto;
 	}
 }
 
