--- a/src/modules/rules/directives/categorization/categorization.scss
+++ b/src/modules/rules/directives/categorization/categorization.scss
@@ -1,4 +1,5 @@
 cn-categorization{
+	width: 100%;
 	.categorization{
 		border: 1px solid #ccc;
 		md-input-container{
@@ -8,5 +9,5 @@ cn-categorization{
 		p{
 			padding: 18px;
 		}
-	}	
+	}
 }
