--- a/src/modules/core/sass/layout.scss
+++ b/src/modules/core/sass/layout.scss
@@ -13,12 +13,39 @@ body {
     -o-transition : none!important;
 		transition: none!important;
 		background: transparent;
+    >#sidenavUserInfo{
+      height: 185px;
+      background: grey;
+      div:first-child {
+        >span {
+          border-radius: 50%;
+          max-height: 60px;
+          max-width: 60px;
+          width: 60px;
+          height: 60px;
+          background-size: contain;
+          background-repeat: no-repeat;
+          border: 1px solid rgba(255,255,255,.5);
+          background-position: top center;
+        }
+      }
+    }
 
 	}
 	>md-backdrop.md-sidenav-backdrop {
 		z-index: -1!important;
 		display: none!important;
 	}
+}
+
+#navMenuTop {
+  >ul{
+    padding: 0;
+    li {
+      list-style: none;
+      font-size: 0.85rem;
+    }
+  }
 }
 
 .md-caption{
