--- a/src/contactNetConfig/modules/core/sass/layout.scss
+++ b/src/contactNetConfig/modules/core/sass/layout.scss
@@ -7,7 +7,10 @@ body {
 }
 
 body {
-	>md-sidenav {
+  >md-content {
+    background: transparent;
+  }
+	[role="view"] >md-sidenav {
     -webkit-transition : none!important;
     -moz-transition : none!important;
     -o-transition : none!important;
@@ -32,7 +35,7 @@ body {
     }
 
 	}
-	>md-backdrop.md-sidenav-backdrop {
+	[role="view"] >md-backdrop.md-sidenav-backdrop {
 		z-index: -1!important;
 		display: none!important;
 	}
@@ -163,7 +166,7 @@ body {
   position: relative;
 }
 
-[ui-view].ng-enter, [ui-view].ng-leave {
+[role="main"] >[ui-view].ng-enter, [role="main"] >[ui-view].ng-leave {
   position: absolute;
   width: 100%;
   z-index: 1;
@@ -173,7 +176,7 @@ body {
 	transition:all 0.2s ease-in-out;
 }
 
-[ui-view].ng-enter {
+[role="main"] >[ui-view].ng-enter {
   opacity: 0;
   -webkit-transition-delay: 650ms;
   -moz-transition-delay: 650ms;
@@ -185,7 +188,7 @@ body {
   transform:translate(0, 100px);
 }
 
-[ui-view].ng-enter-active {
+[role="main"] >[ui-view].ng-enter-active {
   opacity: 1;
   -webkit-transform:translate(0, 0);
   -moz-transform:translate(0, 0);
@@ -193,7 +196,7 @@ body {
   transform:translate(0, 0);
 }
 
-[ui-view].ng-leave {
+[role="main"] >[ui-view].ng-leave {
   opacity: 1;
   -webkit-transform:translate(0, 0);
   -moz-transform:translate(0, 0);
@@ -201,7 +204,7 @@ body {
   transform:translate(0, 0);
 }
 
-[ui-view].ng-leave-active {
+[role="main"] >[ui-view].ng-leave-active {
   opacity: 0;
   -webkit-transform:translate(0, 100px);
   -moz-transform:translate(0, 100px);
