chore(core, contact nets)
- Add search
- Modify layout CSS
- Modify tabs Core
- Modify contactNet mocks to BBDD
- Modify CSS contactNets
- Modify CSS arrows layout

--- a/src/contactNetConfig/modules/core/sass/cardsLayout.scss
+++ b/src/contactNetConfig/modules/core/sass/cardsLayout.scss
@@ -9,6 +9,41 @@ $cnBackgroundCards : #FFF;
   background-color: white;
 }
 
+.filterSearch {
+  width: 100%;
+  margin: 1em 0;
+  z-index: 1;
+  background: #FFF;
+  top: 0;
+  left: 0;
+  // -webkit-transition: all 0.2s ease-in-out;
+  // -moz-transition: all 0.2s ease-in-out;
+  // -o-transition: all 0.2s ease-in-out;
+  // transition: all 0.2s ease-in-out;
+  transition-property: width, top;
+  >div {
+    padding: 0.5em 1em;
+    >input {
+      // width: 100%;
+      outline: 0;
+      border: 0;
+      padding: 0.5em 0.5em;
+    }
+  }
+}
+.filterSearchExpanded, .filterSearch:focus {
+  position: fixed;
+  margin: 0;
+  background: #FFF;
+  >div {
+    max-width: 75%;
+    margin: 0 auto;
+    >input {
+      padding: 0.5em 0.5em;
+    }
+  }
+}
+
 .cardsLayout{
 
   position: relative;
