--- a/src/contactNetConfig/modules/core/sass/layout.scss
+++ b/src/contactNetConfig/modules/core/sass/layout.scss
@@ -107,9 +107,9 @@ body {
 .arrowUp {
   width: 0;
   height: 0;
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid black;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 7px solid black;
 }
 
 [role="main"] {
@@ -236,6 +236,6 @@ body {
 }
 
 .greenVC-color{
-  color: $greenVC;
+  color: $greenVC!important;
   outline: none;
 }
