--- a/src/contactNetConfig/modules/channels/partials/mail.html
+++ b/src/contactNetConfig/modules/channels/partials/mail.html
@@ -1,17 +1,18 @@
 <div style="overflow-y:auto;" layout="row">
-	<md-input-container flex>
-		<label>Nombre de la regla</label>
+	<md-input-container flex="50">
+		<label>Nombre del canal</label>
 		<input ng-model="v.multimedia">
 	</md-input-container>
-	<md-input-container flex>
-		<label>Buzón de correo corporativo</label>
-		<input ng-model="v.multimediaParams.MailConfig.SendGridAccount" ng-change="v.multimediaDummy = v.multimediaParams.MailConfig.SendGridAccount">
-	</md-input-container>
+	
 </div>
 
 <div style="overflow-y:auto;" layout="row">
 	<md-input-container flex>
-    <label>Tipo de plataforma</label>
+		<label>Buzón de correo corporativo</label>
+		<input ng-model="v.multimediaParams.MailConfig.SendGridAccount" ng-change="v.multimediaDummy = v.multimediaParams.MailConfig.SendGridAccount">
+	</md-input-container>
+	<md-input-container flex>
+    <label>Conector VC360</label>
     <md-select ng-model="v.multimediaParams.MailType">
     	<md-option value="SendGrid">SendGrid</md-option>
     </md-select>
