feat(channels, rules, repos):
-NewPhone shows an alert message
-Categories CRUD finished
-CRUD implemented in qualifications, skills and pause_states (pending
back integration)
-ngDisabled when element isn’t modificable
-Duplicate menu-option in rules view

--- a/src/contactNetConfig/modules/core/sass/layout.scss
+++ b/src/contactNetConfig/modules/core/sass/layout.scss
@@ -67,6 +67,13 @@ body {
       background: white;
     }
   }
+  md-tab-item{
+    &:last-of-type{
+      md-icon, .md-button{
+        color: #888 !important;  
+      }
+    }
+  }
 }
 
 .layoutMenu {
