--- a/src/contactNetConfig/modules/channels/partials/chat.html
+++ b/src/contactNetConfig/modules/channels/partials/chat.html
@@ -1,7 +1,7 @@
 <div style="overflow-y:auto;" layout="row">
 	<md-input-container flex>
 		<label>Nombre del canal</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimedia">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimedia">
 	</md-input-container>
 </div>
 
@@ -18,14 +18,14 @@
 <div layout="row">
 	<md-input-container flex>
     <label>Carga del widget</label>
-    <md-select ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.loadingMode">
+    <md-select ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.loadingMode">
     	<md-option value="open">Maximizada</md-option>
       <md-option value="closed">Bajo demanda</md-option>
     </md-select>
   </md-input-container>
   <md-input-container flex>
     <label>Identificación del usuario</label>
-    <md-select ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.authenticationMode">
+    <md-select ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.authenticationMode">
     	<md-option value="anonymous">Anónimo</md-option>
       <md-option value="email">Email</md-option>
     </md-select>
@@ -35,7 +35,7 @@
 <div layout="row">
   <md-input-container flex="50">
     <label>Plantilla</label>
-    <md-select ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.templateId">
+    <md-select ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.templateId">
     	<md-option value="1">Plantilla por defecto</md-option>
     </md-select>
   </md-input-container>
@@ -49,21 +49,21 @@
 			<div layout="row" layout-align="space-between">
 				<div layout="column">
 					<span class="md-caption">Fondo primario</span>
-					<cn-color-picker ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.primaryBackgroundColor" options="colorOptions"></cn-color-picker>
+					<cn-color-picker ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.primaryBackgroundColor" options="colorOptions"></cn-color-picker>
 				</div>
 				<div layout="column">
 					<span class="md-caption">Fondo acento</span>
-					<cn-color-picker ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.secundaryBackgroundColor" options="colorOptions"></cn-color-picker>
+					<cn-color-picker ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.secundaryBackgroundColor" options="colorOptions"></cn-color-picker>
 				</div>
 			</div>
 			<div layout="row" layout-align="space-between">
 				<div layout="column">
 					<span class="md-caption">Texto primario</span>
-					<cn-color-picker ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.primaryColor" options="colorOptions"></cn-color-picker>
+					<cn-color-picker ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.primaryColor" options="colorOptions"></cn-color-picker>
 				</div>
 				<div layout="column">
 					<span class="md-caption">Texto acento</span>
-					<cn-color-picker ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.secundaryColor" options="colorOptions"></cn-color-picker>
+					<cn-color-picker ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.secundaryColor" options="colorOptions"></cn-color-picker>
 				</div>
 			</div>
 		</div>
@@ -78,21 +78,21 @@
 <div style="overflow-y:auto;" layout="row">
 	<md-input-container flex>
 		<label>Título de la ventana del chat</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.headerText">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.headerText">
 	</md-input-container>
 	<md-input-container flex>
 		<label>Texto de bienvenida</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.welcomeText">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.welcomeText">
 	</md-input-container>
 </div>
 
 <div style="overflow-y:auto;" layout="row">
 	<md-input-container flex>
 		<label>Texto para iniciar conversación</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.connectText">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.connectText">
 	</md-input-container>
 	<md-input-container flex>
 		<label>Texto para reiniciar sesión / conversación</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimediaParams.ChatConfig.resetText">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.ChatConfig.resetText">
 	</md-input-container>
 </div>
