--- a/src/contactNetConfig/modules/channels/partials/mail.html
+++ b/src/contactNetConfig/modules/channels/partials/mail.html
@@ -1,7 +1,7 @@
 <div style="overflow-y:auto;" layout="row">
 	<md-input-container flex="50">
 		<label>Nombre del canal</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimedia">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimedia">
 	</md-input-container>
 	
 </div>
@@ -9,11 +9,11 @@
 <div style="overflow-y:auto;" layout="row">
 	<md-input-container flex>
 		<label>Buzón de correo corporativo</label>
-		<input ng-disabled="!v.configModificable" ng-model="v.multimediaParams.MailConfig.SendGridAccount" ng-change="v.multimediaDummy = v.multimediaParams.MailConfig.SendGridAccount">
+		<input ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.MailConfig.SendGridAccount" ng-change="v.multimediaDummy = v.multimediaParams.MailConfig.SendGridAccount">
 	</md-input-container>
 	<md-input-container flex>
     <label>Conector VC360</label>
-    <md-select ng-disabled="!v.configModificable" ng-model="v.multimediaParams.MailType">
+    <md-select ng-disabled="!v.modificable && false" ng-model="v.multimediaParams.MailType">
     	<md-option value="SendGrid">SendGrid</md-option>
     </md-select>
   </md-input-container>
