--- a/src/contactNetConfig/modules/core/sass/cardsLayout.scss
+++ b/src/contactNetConfig/modules/core/sass/cardsLayout.scss
@@ -35,6 +35,7 @@ $cnBackgroundCards : #FFF;
   position: fixed;
   margin: 0;
   background: #FFF;
+  z-index: 2;
   >div {
     max-width: 75%;
     margin: 0 auto;
