chore(contactnets, core)
- modify

--- a/src/contactNetConfig/modules/core/directives/cnAgentsBySupervisor/cnAgentsBySupervisor.scss
+++ b/src/contactNetConfig/modules/core/directives/cnAgentsBySupervisor/cnAgentsBySupervisor.scss
@@ -13,7 +13,8 @@
       opacity: 0.5; }
   .chipsAgentsBySupervisors .contact-item .md-list-item-text {
     padding: 14px 0;
-    max-width: 190px; }
+    // max-width: 190px; 
+  }
     .chipsAgentsBySupervisors .contact-item .md-list-item-text h3 {
       margin: 0 !important;
       padding: 0;
